@@ -55,6 +55,15 @@ def emit_java_classes(target, source, env):
     class_suffix = env.get('JAVACLASSSUFFIX', '.class')
 
     target[0].must_be_same(SCons.Node.FS.Dir)
+    classdir = target[0]
+
+    s = source[0].rentry().disambiguate()
+    if isinstance(s, SCons.Node.FS.File):
+        sourcedir = s.dir.rdir()
+    elif isinstance(s, SCons.Node.FS.Dir):
+        sourcedir = s.rdir()
+    else:
+        raise SCons.Errors.UserError("Java source must be File or Dir, not '%s'" % s.__class__)
 
     slist = []
     js = _my_normcase(java_suffix)
@@ -75,7 +84,7 @@ def emit_java_classes(target, source, env):
                 arg.extend(java_paths)
             os.path.walk(entry.rdir().get_abspath(), visit, slist)
         else:
-           raise SCons.Errors.UserError("Java source must be File or Dir, not '%s'" % entry.__class__)
+            raise SCons.Errors.UserError("Java source must be File or Dir, not '%s'" % entry.__class__)
 
     tlist = []
     for f in slist:
@@ -84,13 +93,15 @@ def emit_java_classes(target, source, env):
         if pkg_dir:
             for c in classes:
                 t = target[0].Dir(pkg_dir).File(c+class_suffix)
-                t.attributes.java_classdir = target[0]
+                t.attributes.java_classdir = classdir
+                t.attributes.java_sourcedir = sourcedir
                 t.attributes.java_classname = classname(pkg_dir + os.sep + c)
                 tlist.append(t)
         elif classes:
             for c in classes:
                 t = target[0].File(c+class_suffix)
-                t.attributes.java_classdir = target[0]
+                t.attributes.java_classdir = classdir
+                t.attributes.java_sourcedir = sourcedir
                 t.attributes.java_classname = classname(c)
                 tlist.append(t)
         else:
@@ -98,7 +109,8 @@ def emit_java_classes(target, source, env):
             # Just do our best based on the source file name.
             base = str(f)[:-len(java_suffix)]
             t = target[0].File(base + class_suffix)
-            t.attributes.java_classdir = target[0]
+            t.attributes.java_classdir = classdir
+            t.attributes.java_sourcedir = sourcedir
             t.attributes.java_classname = classname(base)
             tlist.append(t)
 
@@ -111,13 +123,33 @@ JavaBuilder = SCons.Builder.Builder(action = JavaAction,
                     target_factory = SCons.Node.FS.Entry,
                     source_factory = SCons.Node.FS.Entry)
 
+def getClassPath(env,target, source, for_signature):
+    path = ""
+    if env.has_key('JAVACLASSPATH') and env['JAVACLASSPATH']:
+        path = SCons.Util.AppendPath(path, env['JAVACLASSPATH'])
+        return "-classpath %s" % (path)
+    else:
+        return ""
+
+def getSourcePath(env,target, source, for_signature):
+    path = ""
+    if env.has_key('JAVASOURCEPATH') and env['JAVASOURCEPATH']:
+        path = SCons.Util.AppendPath(path, env['JAVASOURCEPATH'])
+    path = SCons.Util.AppendPath(path,['${TARGET.attributes.java_sourcedir}'])
+    return "-sourcepath %s" % (path)
+
 def generate(env):
     """Add Builders and construction variables for javac to an Environment."""
     env['BUILDERS']['Java'] = JavaBuilder
 
     env['JAVAC']            = 'javac'
     env['JAVACFLAGS']       = SCons.Util.CLVar('')
-    env['JAVACCOM']         = '$JAVAC $JAVACFLAGS -d ${TARGET.attributes.java_classdir} -sourcepath ${SOURCE.dir.rdir()} $SOURCES'
+    env['JAVACLASSPATH']    = []
+    env['JAVASOURCEPATH']   = []
+    env['_JAVACLASSPATH']   = getClassPath
+    env['_JAVASOURCEPATH']  = getSourcePath
+    env['_JAVACCOM']        = '$JAVAC $JAVACFLAGS $_JAVACLASSPATH -d ${TARGET.attributes.java_classdir} $_JAVASOURCEPATH $SOURCES'
+    env['JAVACCOM']         = "${TEMPFILE('$_JAVACCOM')}"
     env['JAVACLASSSUFFIX']  = '.class'
     env['JAVASUFFIX']       = '.java'
 
