@@ -14,6 +14,8 @@ JAVACFLAGS
 JAVACCOM
 JAVACLASSSUFFIX
 JAVASUFFIX
+JAVACLASSPATH
+JAVASOURCEPATH
 </sets>
 <uses>
 JAVACCOMSTR
@@ -113,11 +115,53 @@ builder.
 </summary>
 </cvar>
 
+<cvar name="JAVACLASSPATH">
+<summary>
+Specifies the list of directories that
+will be searched for Java
+<filename>.class</filename> file.
+The directories in this list will be added to the
+&javac; and &javah; command lines
+via the <option>-classpath</option> option.
+The individual directory names will be
+separated by the operating system's path separate character
+(<filename>:</filename> on UNIX/Linux/POSIX,
+<filename>;</filename> on Windows).
+
+Note that this currently just adds the specified
+directory via the <option>-classpath</option> option.
+&SCons; does not currently search the
+&cv-JAVACLASSPATH; directories for dependency
+<filename>.class</filename> files.
+</summary>
+</cvar>
+
 <cvar name="JAVACLASSSUFFIX">
 <summary>
 The suffix for Java class files;
 <filename>.class</filename>
 by default.
+</summary>
+</cvar>
+
+<cvar name="JAVASOURCEPATH">
+<summary>
+Specifies the list of directories that
+will be searched for input
+<filename>.java</filename> file.
+The directories in this list will be added to the
+&javac; command line
+via the <option>-sourcepath</option> option.
+The individual directory names will be
+separated by the operating system's path separate character
+(<filename>:</filename> on UNIX/Linux/POSIX,
+<filename>;</filename> on Windows).
+
+Note that this currently just adds the specified
+directory via the <option>-sourcepath</option> option.
+&SCons; does not currently search the
+&cv-JAVASOURCEPATH; directories for dependency
+<filename>.java</filename> files.
 </summary>
 </cvar>
 
