@@ -85,6 +85,10 @@ RELEASE 0.97.X - XXX
   - Support passing the Java() builder a list of explicit .java files
     (not only a list of directories to be scanned for .java files).
 
+  - Add $JAVACLASSPATH and $JAVASOURCEPATH variables, that get added to
+    the javac "-classpath" and "-sourcepath" options.  (Note that SCons
+    does *not* currently search these paths for implicit dependencies.)
+
   From Jan Nijtmans:
 
   - Find Java anonymous classes when the next token after the name is
